@@ -1,3 +1,8 @@
+2019-04-02 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
+
+	* sdas/aspdk15/Makefile:
+	  Remove generated file from svn.
+
 2019-03-29 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
 
 	* src/SDCCast.c,
